--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="logo192.png" />
     
     
-    <title>React App</title>
+    <title>Repo</title>
   </head>
   <body>
     <div id="root"></div>
